objects/ASI_TnE_Mass_Upload_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Error_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI TnE Mass Upload Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>ASI TnE Mass Upload Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Mass Upload Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>